2013-03-05  Junichi Satoh  <junichi@rworks.jp>
	
	* include/help/ja/help_tags_config.php,
        include/help/ja/help_agent_server.php: Added new help files.
	
        * include/help/ja/help_module_definition.php: Updated the description.

2013-03-04  Sergio Martin <sergio.martin@artica.es>

	* include/functions_alerts.php
	include/functions_modules.php
	include/functions_reporting.php
	include/functions_servers.php: Fix counts when validate or
	delete alerts and fix some little bugs of previous commits

2013-03-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/constants.php: added constant for the module not init
	status.

2013-03-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/setup/setup_netflow.php,
	include/help/ja/help_snmp_trap_types.php,
	include/functions_extensions.php,
	include/functions_snmp_browser.php, include/functions_events.php,
	include/functions_api.php: improved the code style.

2013-03-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.item_editor.php,
	include/functions_ui.php, include/functions_reporting.php,
	include/constants.php, include/ajax/reporting.ajax.php,
	include/ajax/agent.php, operation/agentes/ver_agente.php: fixed the
	graphs and the autocomplete.
	
	Fixes: #3606284

2013-03-04  Sergio Martin <sergio.martin@artica.es>

	* include/functions_alerts.php: Update the fired
	counts on validate alerts function

	* include/functions_events.php
	include/functions_reporting.php
	include/javascript/jquery.pandora.js
	include/functions_treeview.php
	operation/tree.php
	operation/agentes/estado_generalagente.php
	operation/agentes/estado_agente.php
	operation/search_agents.php: Improve and unify code
	of the status counts in agents list, agent detail, 
	tree view and search views

	* ajax.php: Load the user language in the
	ajax entry point. Until now the language was the
	general!

2013-03-01  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php