@@ -71,13 +71,13 @@ CREATE TABLE IF NOT EXISTS `tagente` (
 	`update_gis_data` TINYINT(1) NOT NULL DEFAULT '1' COMMENT 'set it to one to update the position data (altitude, longitude, latitude) when getting information from the agent or to 0 to keep the last value and do not update it' ,
 	`url_address` mediumtext NULL,
 	`quiet` tinyint(1) NOT NULL default '0',
-	`normal_count` bigint(20) unsigned NOT NULL default '0',
-	`warning_count` bigint(20) unsigned NOT NULL default '0',
-	`critical_count` bigint(20) unsigned NOT NULL default '0',
-	`unknown_count` bigint(20) unsigned NOT NULL default '0',
-	`notinit_count` bigint(20) unsigned NOT NULL default '0',
-	`total_count` bigint(20) unsigned NOT NULL default '0',
-	`fired_count` bigint(20) unsigned NOT NULL default '0',
+	`normal_count` bigint(20) NOT NULL default '0',
+	`warning_count` bigint(20) NOT NULL default '0',
+	`critical_count` bigint(20) NOT NULL default '0',
+	`unknown_count` bigint(20) NOT NULL default '0',
+	`notinit_count` bigint(20) NOT NULL default '0',
+	`total_count` bigint(20) NOT NULL default '0',
+	`fired_count` bigint(20) NOT NULL default '0',
 	PRIMARY KEY  (`id_agente`),
 	KEY `nombre` (`nombre`),
 	KEY `direccion` (`direccion`),
